refactor response api
